--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     src: url("fonts/ABC\ Gravity\ Variable/ABCGravityVariable-Trial.woff2") format("woff2 supports variations"),
         url("fonts/ABC\ Gravity\ Variable/ABCGravityVariable-Trial.woff2") format("woff2-variations");
     font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+
 }
 
 * {
@@ -26,6 +29,7 @@
 
 #variable-title {
     font-weight: 400;
+    letter-spacing: normal;
     display: inline-block;
     text-align: center;
     font-family: "ABC Gravity Variable";
