--- a/style.css
+++ b/style.css
@@ -13,7 +13,14 @@
     padding: 0;
 }
 
+body{
+    height: 600vh;
+    
+}
+
 #strech-container {
+    position: fixed;
+    top: 0;
     width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -36,14 +43,20 @@
     font-size: 108px;
     font-variation-settings: "wdth"8;
     white-space: nowrap;
+
+
+    transform-origin: center top;
+    transform: translateY(-10px) scaleY(1);
 }
 
 .test {
+    height: 200vh;
+    position: relative;
     display: none;
     margin: auto;
     max-width: 1600px;
     width: 100%;
-    height: 100px;
+    /* height: 100px; */
     background-color: red;
     opacity: .1;
 }
